odevzdani/tests/valid_input/ok08.java
class Main {
    static int aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = 0000_0012;
    static void run() {
        int i = 0xF;
    }
}
