odevzdani/tests/invalid_syn/syn01.java
static void run() {
    int a;
}
